tests/compile-fail/integration__integration__ecl_features__olde_unsupported_extern.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: extern functions are not supported in old-style ECL file
  ┌─ <input>:8:1
  │
8 │ void externFunc();
  │ ^^^^^^^^^^^^^^^^^^ unsupported extern function


